Remove DivergentFrameworkFactory dependency, add Gson dependency, remove Guava dependency (Immutable list), better error message.